--- a/debian/po/am.po
+++ b/debian/po/am.po
@@ -3,41 +3,65 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# Amharic translation for debian-installer
+# This file is distributed under the same license as the debian-installer package.
+# tegegne tefera <tefera@mekuria.com>, 2006.
+#
+#
+# Translations from iso-codes:
+#   Alastair McKinstry <mckinstry@debian.org>, 2004.
+#   Data taken from ICU-2.8; contributed by:
+#   - Daniel Yacob <yacob@geez.org>, Ge'ez Frontier Foundation
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: debian-installer\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: 2014-04-04 22:07+0100\n"
+"Last-Translator: Tegegne Tefera <tefera@mekuria.com>\n"
+"Language-Team: Amharic <linux-ethiopia@googlegroups.com>\n"
+"Language: am\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: n>1;\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "ተከላውን ያለ አስነሺ ቀጥል"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc ን መጫን አልተሳካም"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "የproc ፋይል ስርዓትን በ /target/proc መጫን አልተሳካም።"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "ለዝርዝሩ /var/log/syslog ወይም virtual console 4ን ይመልከቱ።"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "ማስጠንቀቂያ፦ ስርዓትዎን ቡት ማድረግ አይቻል ይሆናል!"
 
 #. Type: note
 #. Description
@@ -47,7 +71,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "በራስ እንዲነሳ የfirmware ተለዋጭ እሴቶችን በመሰየም ላይ"
 
 #. Type: note
 #. Description
@@ -68,6 +92,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"ይህንን ማደግ የሚያስፈልግዎት አንድ ጊዜ ብቻ ነው፡፡ ከዚያ በኋላ የ\"boot\" ትዕዛዝን በመስጠት ወይም እንደገና "
+"በማስነሳት አዲስ ወደ ተተከለው ስርዓትዎ ይግቡ፡፡"
 
 #. Type: note
 #. Description
@@ -76,17 +102,21 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr ""
+msgstr "በfirmware ማስገቢያ ላይ ከርነሉን በማስገባት የማስነሳት ምርጫ ይኖሮታል፡፡"
 
 #. Type: note
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:4001
+#, fuzzy
 msgid ""
 "Some variables need to be set in CFE in order for your system to boot "
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"ስርዓትዎ ወደ ሊኒክስ በራስ እንዲገባ አንዳንድ ተለዋጮች በNetwinder NeTTrom firmware መሰየም አለባቸው፡፡"
+"በዚህ ተከላ መጨረሻ ስራዓቱ እንደገና ሲነሳ በራስ ለመነሳት ይሞክራል፡፡ማንኛውንም ቁልፍ በመጫን ይህንን ማስቆም "
+"ይችላሉ፡፡ ይህ ሲሆን ወደ NeTTrom የትዕዛዝ ማዕከል ይወርዱና የሚቀጥሉትን ትዕዛዞች ይፈጽማሉ፡፡"
 
 #. Type: note
 #. Description
@@ -111,7 +141,7 @@ msgstr ""
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "ምንም አስነሺ ፕሮግራም አልተተከለም"
 
 #. Type: note
 #. Description
@@ -120,7 +150,7 @@ msgstr ""
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr ""
+msgstr "ምንም የቡት ጫኝ አልተተካለም። ምክንያቱም ላለመትከል መርጠዋል ወይም አስሊዎ ቡት ጫኝን አይደግፍም።"
 
 #. Type: note
 #. Description
@@ -130,3 +160,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"${BOOT} ክፋይ ላይ ያለውን ${KERNEL} አውራከዋኝና ${ROOT} ማለፊያቃልን በመጠቀም በእጅ ማስነሳት "
+"ያስፈልጎታል።"
