--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -3,27 +3,67 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of debian-installer_packages_po_sublevel1_he.po to Hebrew
+# Hebrew messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+#
+#
+#
+#
+# Translations from iso-codes:
+#     Translations taken from ICU SVN on 2007-09-09
+#   Translations from KDE:
+#
+#   Translations taken from KDE:
+#
+#
+# Amit Dovev <debian.translator@gmail.com>, 2007.
+# Meital Bourvine <meitalbourvine@gmail.com>, 2007.
+# Omer Zak <w1@zak.co.il>, 2008, 2010, 2012, 2013.
+# Lior Kaplan <kaplan@debian.org>, 2004-2007, 2008, 2010, 2011, 2015.
+#   Tobias Quathamer <toddy@debian.org>, 2007.
+#   Free Software Foundation, Inc., 2002,2004.
+#   Alastair McKinstry <mckinstry@computer.org>, 2002.
+#   Meni Livne <livne@kde.org>, 2000.
+#   Free Software Foundation, Inc., 2002,2003.
+#   - Meni Livne <livne@kde.org>, 2000.
+#   Meital Bourvine <meitalbourvine@gmail.com>, 2007.
+msgid ""
+msgstr ""
+"Project-Id-Version: debian-installer_packages_po_sublevel1_he\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
+"Language: he\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "המשך ללא מנהל אתחול"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "נכשל העיגון של /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "עיגון מערכת הקבצים מסוג proc ב- /target/proc נכשל."
 
 #. Type: error
 #. Description
@@ -31,13 +71,14 @@ msgstr ""
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"בדוק את /var/log/syslog או את הקונסול הווירטואלי מספר 4 בשביל פרטים נוספים."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "אזהרה: יתכן שהמערכת שלך אינה ניתנת לאתחול!"
 
 #. Type: note
 #. Description
@@ -47,7 +88,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "הגדרת משתני קושחה (firmware) בשביל אתחול אוטומטי"
 
 #. Type: note
 #. Description
@@ -59,6 +100,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"כמה משתנים צריכים להיקבע בקושחת Genesi כדי שהמערכת שלך תאותחל אוטומטית. בסוף "
+"ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של קושחת Genesi, תוכל לקבוע את "
+"המשתנים הבאים כדי לאפשר אתחול אוטומטי:"
 
 #. Type: note
 #. Description
@@ -68,6 +112,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"את פעולה זאת תצטרך לעשות רק פעם אחת. לאחר מכן, הכנס את הפקודה \"boot\" או "
+"אתחל את המערכת כדי להמשיך למערכת החדשה שלך."
 
 #. Type: note
 #. Description
@@ -77,6 +123,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"לחלופין, תוכל לאתחל את הקרנל ידנית על ידי הכנסה של הטקסט הבא בבקשת הקלט של "
+"הקושחה:"
 
 #. Type: note
 #. Description
@@ -87,6 +135,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"כמה משתנים צריכים להיקבע ב-CFE כדי שהמערכת שלך תאותחל אוטומטית. בסוף ההתקנה, "
+"המערכת שלך תאותחל מחדש. בבקשת הקלט של קושחת ה-CFE, קבע ערכים למשתנים הבאים "
+"כדי לפשט את האתחול:"
 
 #. Type: note
 #. Description
@@ -96,6 +147,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"תצטרך לעשות זאת רק פעם אחת. הפעולה תאפשר לך פשוט לתת את הפקודה \"boot_debian"
+"\" בבקשת הקלט של CFE."
 
 #. Type: note
 #. Description
@@ -105,13 +158,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"אם הינך מעדיף לבצע איתחול אוטומטי בכל איתחול, הינך יכול לקבוע את ערך המשתנה "
+"הבא בנוסף לעיל:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "לא הותקן מנהל אתחול"
 
 #. Type: note
 #. Description
@@ -121,6 +176,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"לא הותקן מנהל אתחול, או בגלל שבחרת לא להתקין, או כי אין מנהל אתחול "
+"לארכיטקטורה שלך."
 
 #. Type: note
 #. Description
@@ -130,3 +187,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"אתה צריך לאתחל ידנית עם הליבה ${KERNEL} על המחיצה ${BOOT} כאשר הפרמטר "
+"${ROOT} מועבר לליבה."
