--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -3,27 +3,59 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# Japanese messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+#
+#
+# Translations from iso-codes:
+#   Alastair McKinstry <mckinstry@computer.org>, 2001, 2002.
+#   Free Software Foundation, Inc., 2000, 2001, 2004, 2005, 2006
+#   IIDA Yosiaki <iida@gnu.org>, 2004, 2005, 2006.
+#   Kenshi Muto <kmuto@debian.org>, 2006-2007
+#   Takayuki KUSANO <AE5T-KSN@asahi-net.or.jp>, 2001.
+#   Takuro Ashie <ashie@homa.ne.jp>, 2001.
+#   Tobias Quathamer <toddy@debian.org>, 2007.
+#     Translations taken from ICU SVN on 2007-09-09
+#   Translations from KDE: 
+#   - Taiki Komoda <kom@kde.gr.jp>
+#   Yasuaki Taniguchi <yasuakit@gmail.com>, 2010, 2011.
+#   Yukihiro Nakai <nakai@gnome.gr.jp>, 2000.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: debian-installer\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: Debian L10n Japanese <debian-japanese@lists.debian.org>\n"
+"Language: ja\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "ブートローダなしで続ける"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc のマウントに失敗しました"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "proc ファイルシステムを /target/proc にマウントするのに失敗しました。"
 
 #. Type: error
 #. Description
@@ -31,13 +63,15 @@ msgstr ""
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"詳細については、/var/log/syslog を確認するか、仮想コンソール 4 を見てくださ"
+"い。"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "警告: あなたのシステムは起動できない恐れがあります!"
 
 #. Type: note
 #. Description
@@ -47,7 +81,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "自動起動するためのファームウェア変数を設定しています"
 
 #. Type: note
 #. Description
@@ -59,6 +93,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"あなたのシステムで Debian を自動的に起動するために、Genesi ファームウェアにい"
+"くつかの変数を設定する必要があります。このインストールの終わりに、システムは"
+"再起動します。ファームウェアプロンプトでは、自動起動できるように、次のように"
+"ファームウェア変数を設定します:"
 
 #. Type: note
 #. Description
@@ -68,6 +106,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"これを 1 度だけ行う必要があります。そのあとで、新しいインストールシステムに進"
+"むために、\"boot\" コマンドを入力するかシステムを再起動します。"
 
 #. Type: note
 #. Description
@@ -77,6 +117,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"または、ファームウェアプロンプトで次のように主動で入力することで、カーネルを"
+"ブートすることができます:"
 
 #. Type: note
 #. Description
@@ -87,6 +129,10 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"あなたのシステムで Debian を自動的に起動するために、CFE にいくつかの変数を設"
+"定する必要があります。このインストールの終わりに、システムは再起動します。"
+"ファームウェアプロンプトでは、簡単に起動できるように、次のようにファームウェ"
+"ア変数を設定します:"
 
 #. Type: note
 #. Description
@@ -96,6 +142,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"この操作は一度のみ行います。これで CFE プロンプトで \"boot_debian\" コマンド"
+"を発行するだけとなります。"
 
 #. Type: note
 #. Description
@@ -105,13 +153,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"スタートアップのたびに自動起動したいなら、上記のものに加えて以下の値を設定で"
+"きます。"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "ブートローダがインストールされていません"
 
 #. Type: note
 #. Description
@@ -121,6 +171,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"あなたが選んでいないか、指定したアーキテクチャがブートローダをまだサポートし"
+"ていないために、ブートローダがインストールされていません。"
 
 #. Type: note
 #. Description
@@ -130,3 +182,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"パーティション ${BOOT} の ${KERNEL} カーネルは、カーネル引数として ${ROOT} を"
+"渡して、手動でブートする必要があります。"
