--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -3,41 +3,71 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of Debian Installer Level 1 - sublevel 1 to malayalam
+# Copyright (c)  2006-2010 Debian Project
+# Praveen|പ്രവീണ്‍ A|എ <pravi.a@gmail.com>, 2006-2010.
+# Santhosh Thottingal <santhosh00@gmail.com>, 2006.
+# Sreejith :: ശ്രീജിത്ത് കെ <sreejithk2000@gmail.com>, 2006.
+# Credits:  V Sasi Kumar, Sreejith N, Seena N, Anivar Aravind, Hiran Venugopalan and Suresh P
+# Debian Installer master translation file template
+# Don't forget to properly fill-in the header of PO files
+# Debian Installer translators, please read the D-I i18n documentation
+# in doc/i18n/i18n.txt#
+# Translations from iso-codes:
+# Tobias Quathamer <toddy@debian.org>, 2007.
+# Translations taken from ICU SVN on 2007-09-09
+# Praveen A <pravi.a@gmail.com>, 2006, 2008.
+# Ani Peter <peter.ani@gmail.com>, 2009
+# Anish Sheela <aneesh.nl@gmail.com>, 2013.
+msgid ""
+msgstr ""
+"Project-Id-Version: Debian Installer Level 1\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: Swatantra Malayalam Computing <discuss@lists.smc.org.in>\n"
+"Language: ml\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "ബൂട്ട് ലോഡര്‍ ഇല്ലാതെ തുടരുക"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "/target/proc മൌണ്ട് ചെയ്യുന്നതില്‍ പരാജയപ്പെട്ടു"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "proc ഫയല്‍ സിസ്റ്റം /target/proc ല്‍ മൌണ്ട് ചെയ്യുന്നതില്‍ പരാജയപ്പെട്ടു."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "വിവരങ്ങള്‍ക്കായി /var/log/syslog പരിശോധിക്കുക അല്ലെങ്കില്‍ വിര്‍ച്വല്‍ കണ്‍സോള്‍ 4 കാണുക."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "മുന്നറിയിപ്പ്: നിങ്ങളുടെ സിസ്റ്റം ബൂട്ട് ചെയ്യാന്‍ പറ്റാതായിട്ടുണ്ടാകാം!"
 
 #. Type: note
 #. Description
@@ -47,7 +77,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിനു് ഫേംവെയര്‍ വാരിയബിളുകള്‍ സജ്ജീകരിച്ചു് കൊണ്ടിരിയ്ക്കുന്നു"
 
 #. Type: note
 #. Description
@@ -59,6 +89,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"നിങ്ങളുടെ സിസ്റ്റം സ്വയം ബൂട്ട് ചെയ്യുന്നതിനു് ജെനസി ഫേംവെയറില്‍ ചില വാരിയബിളുകള്‍ "
+"സജ്ജീകരിയ്ക്കേണ്ടതായുണ്ടു്. ഇന്‍സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യും. സ്വയം-ബൂട്ടിങ്ങ് "
+"പ്രാവര്‍ത്തികമാക്കാന്‍ ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ താഴെ കൊടുത്തിരിക്കുന്ന ഫേംവെയര്‍ വാരിയബിളുകള്‍ "
+"സജ്ജീകരിയ്ക്കുക:"
 
 #. Type: note
 #. Description
@@ -68,6 +102,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"നിങ്ങള്‍ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്‍ഡ് നല്‍കുക അല്ലെങ്കില്‍ "
+"നിങ്ങളുടെ പുതുതായി ഇന്‍സ്റ്റാള്‍ ചെയ്ത സിസ്റ്റത്തിലേയ്ക്കു് പോകാനായി റീബൂട്ട് ചെയ്യുക."
 
 #. Type: note
 #. Description
@@ -77,6 +113,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി നല്‍കി നിങ്ങള്‍ക്കു് ബൂട്ട് ചെയ്യാന്‍ കഴിയും:"
 
 #. Type: note
 #. Description
@@ -87,6 +124,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"നിങ്ങളുടെ സിസ്റ്റം സ്വയം ബൂട്ട് ചെയ്യുന്നതിനു് സിഎഫ്ഇയില്‍ ചില വാരിയബിളുകള്‍ "
+"സജ്ജീകരിയ്ക്കേണ്ടതായുണ്ടു്. ഇന്‍സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യും. ബൂട്ടിങ്ങ് ലളിതമാക്കാന്‍ "
+"ഫേംവെയറിന്റെ സ്ഥാനത്തു് താഴെ കൊടുത്ത വാരിയബിളുകള്‍ കൂടി സജ്ജീകരിയ്ക്കുക:"
 
 #. Type: note
 #. Description
@@ -96,6 +136,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"ഇതു് നിങ്ങള്‍ ഒരിയ്ക്കല്‍ മാത്രം ചെയ്താല്‍ മതി. \"boot_debian\" എന്ന ആജ്ഞ സിഎഫ്ഇയുടെ സ്ഥാനത്തു് "
+"നല്‍കാന്‍ ഇതു് നിങ്ങളെ പര്യാപ്തമാക്കുന്നു."
 
 #. Type: note
 #. Description
@@ -105,13 +147,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"ഓരോ പ്രാവശ്യം തുടങ്ങുമ്പോഴും സ്വയം ബൂട്ട് ചെയ്യാനാണു് നിങ്ങളാഗ്രഹിയ്ക്കുന്നതെങ്കില്‍ മുകളില്‍ പറഞ്ഞവ "
+"കൂടാതെ താഴെ കൊടുത്തിരിയ്ക്കുന്ന വാരിയബിളുകള്‍ കൂടി നിങ്ങള്‍ക്കു് സജ്ജമാക്കാം:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റോള്‍ ചെയ്തില്ല"
 
 #. Type: note
 #. Description
@@ -121,6 +165,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റോള്‍ ചെയ്തില്ല, ഒരു പക്ഷേ വേണ്ടെന്നു് നിങ്ങള്‍ തെരഞ്ഞെടുത്തിരിക്കാം "
+"അല്ലെങ്കില്‍ നിങ്ങളുടെ പ്രത്യേക വാസ്തുവിദ്യ ഒരു ബൂട്ട് ലോഡറിനെ ഇതു വരെ പിന്തുണയ്ക്കാത്തതു് കൊണ്ടാവാം."
 
 #. Type: note
 #. Description
@@ -130,3 +176,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"നിങ്ങള്‍ക്കു് ${BOOT} ഭാഗത്തു് ${KERNEL} കെര്‍ണലും ${ROOT} ഉം കെര്‍ണല്‍ ആര്‍ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
+"മാന്വലായി ബൂട്ട് ചെയ്യേണ്ടി വരും."
