--- a/debian/po/se.po
+++ b/debian/po/se.po
@@ -3,20 +3,43 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of se.po to Northern Saami
+#
+# Debian Installer master translation file template
+# Don't forget to properly fill-in the header of PO files#
+# Debian Installer translators, please read the D-I i18n documentation
+# in doc/i18n/i18n.txt#
+#
+# Børre Gaup <boerre@skolelinux.no>, 2006, 2010.
+msgid ""
+msgstr ""
+"Project-Id-Version: se\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: 2010-12-31 02:09+0100\n"
+"Last-Translator: Børre Gaup <boerre@skolelinux.no>\n"
+"Language-Team: Northern Sami <i18n-sme@lister.ping.uio.no>\n"
+"Language: se\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "Joatkit vuolggahangieđahalli haga"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
+#, fuzzy
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Ii oktage fiilavuogádat lea čatnon /target ohcui"
 
 #. Type: error
 #. Description
@@ -110,8 +133,9 @@ msgstr ""
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
+#, fuzzy
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Ovttadat gosa vuolggáhangieđahalli bidju:"
 
 #. Type: note
 #. Description
