--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -3,27 +3,59 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# Slovak messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+# Peter Mann <peter.mann@tuke.sk>
+# Ivan Masár <helix84@centrum.sk>, 2007, 2008, 2009, 2010, 2011, 2013, 2014, 2015.
+# Translations from iso-codes:
+# (translations from drakfw)
+# Alastair McKinstry <mckinstry@computer.org>, 2001, 2002.
+# Copyright (C) 2002 Free Software Foundation, Inc.
+# Free Software Foundation, Inc., 2004
+# Ivan Masár <helix84@centrum.sk>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015.
+# Translations taken from sk.wikipedia.org on 2008-06-17
+# Pavol Cvengros <orpheus@hq.alert.sk>, 2001.
+# Peter Mann <Peter.Mann@tuke.sk>, 2004, 2006.
+# bronto, 2007.
+# source:
+# http://www.geodesy.gov.sk
+# http://www.fao.org/ (historic names)
+msgid ""
+msgstr ""
+"Project-Id-Version: debian-installer\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: x\n"
+"Language: sk\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "Pokračovanie bez zavádzača"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Chyba pri pripájaní /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Zlyhalo pripájanie súborového systému proc do /target/proc."
 
 #. Type: error
 #. Description
@@ -31,13 +63,15 @@ msgstr ""
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Podrobnosti nájdete v súbore /var/log/syslog alebo na štvrtej virtuálnej "
+"konzole."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Upozornenie: Váš systém sa nemusí spustiť!"
 
 #. Type: note
 #. Description
@@ -47,7 +81,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "Nastavenie premenných firmvéru pre automatické štartovanie"
 
 #. Type: note
 #. Description
@@ -59,6 +93,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"Na automatické spúšťanie systému je potrebné nastavenie niektorých "
+"premenných vo firmvéri Genesi. Na konci inštalácie sa systém reštartuje. V "
+"príkazovom režime firmvéru môžete umožniť automatické štartovanie nastavením "
+"nasledovných premenných:"
 
 #. Type: note
 #. Description
@@ -68,6 +106,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"Stačí to urobiť len raz. Potom zadajte príkaz „boot“ alebo reštartujte "
+"systém, aby ste sa dostali do vášho novo nainštalovaného systému."
 
 #. Type: note
 #. Description
@@ -77,6 +117,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"Inou možnosťou je zavedenie jadra manuálne, ak v príkazovom režime firmvéru "
+"zadáte:"
 
 #. Type: note
 #. Description
@@ -87,6 +129,10 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"Na automatické spúšťanie systému je potrebné nastavenie niektorých "
+"premenných v CFE. Na konci inštalácie sa systém reštartuje. V príkazovom "
+"režime firmvéru môžete zjednodušiť štartovanie nastavením nasledovných "
+"premenných:"
 
 #. Type: note
 #. Description
@@ -96,6 +142,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"Toto bude potrebné vykonať iba raz. Umožní vám to zadať príkaz „boot_debian“ "
+"na príkazovom riadku CFE."
 
 #. Type: note
 #. Description
@@ -105,13 +153,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"Ak uprednostňujete automatické štartovanie pri každom spustení, môžete okrem "
+"hore uvedených nastaviť nasledovnú premennú:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Nie je nainštalovaný žiaden zavádzač"
 
 #. Type: note
 #. Description
@@ -121,6 +171,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"Nebol nainštalovaný žiaden zavádzač, pretože ste ho nezvolili alebo vaša "
+"architektúra zatiaľ nepodporuje žiaden zavádzač."
 
 #. Type: note
 #. Description
@@ -130,3 +182,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"Budete musieť naštartovať manuálne s jadrom ${KERNEL} na oblasti ${BOOT} "
+"spolu s parametrami jadra ${ROOT}."
